--- a/mysample.yml
+++ b/mysample.yml
@@ -18,7 +18,7 @@
          state: present
 
      - name: I want to restart webserver
-       apt:
+       service:
          name: apache2
          state: started         
 
